--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "massive": "^5.7.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
@@ -16,6 +21,8 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "main": "server/index.js",
+  "proxy": "http://localhost:4000",
   "browserslist": [
     ">0.2%",
     "not dead",
